deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-2048
  namespace: game-2048

spec:
  replicas: 3

  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048

  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048

    spec:
      containers:
        - name: app-2048
          image: public.ecr.aws/l6m2t8p7/docker-2048:latest

          ports:
            - containerPort: 80
