service.yml
apiVersion: v1
kind: Service

metadata:
  name: app-2048
  namespace: game-2048

spec:
  type: NodePort

  selector:
    app.kubernetes.io/name: app-2048

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
