ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-2048
  namespace: game-2048

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-2048
                port:
                  number: 80
